<resources>
    <string name="app_name">Happy Buddy</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="inicio">Inicio</string>


    <string name="email">Email</string>
    <string name="pass">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="reset_pass">¿Has olvidado tu contraseña?</string>
    <string name="error_login">No se ha podido iniciar sesión</string>
    <string name="logout">Cerrar sesión</string>
    <string name="empty_fields">Es necesario introducir datos</string>
    <string name="aviso">Aviso</string>
    <string name="envio_contra">¿Quieres recibir un email de restablecimiento de contraseña en el correo especificado?</string>
    <string name="perfil">Perfil</string>

    <string name="solicitar_cita">Solicitar cita</string>
    <string name="choose_date">¿Para cuando quieres pedir cita?</string>
    <string name="hora">Hora</string>
    <string name="fecha">Fecha seleccionada:</string>
    <string name="elige_profesional">Elige un profesional</string>
    <string name="direccion_app">c/ Carrer del Capità Baltasar Tristany, 58, Elche</string>

    <string name="crear_usuario">Crear usuario</string>
    <string name="nuevo_usuario">Registrar nuevo usuario</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="pais">Pais</string>
    <string name="Trabajador">Trabajador</string>

    <string name="genero">Género</string>
    <string-array name="generos">
        <item>Hombre</item>
        <item>Mujer</item>
        <item>No binario</item>
        <item>Prefiero no contestar</item>
    </string-array>

    <string name="estado_civil">Estado civil</string>
    <string-array name="estados_civiles">
        <item>Soltero</item>
        <item>Casado</item>
        <item>Viudo</item>
        <item>Divorciado</item>
    </string-array>


    <string name="intro_contra_nueva">Introduce tu contraseña</string>
    <string name="intro_contra_confirmar">Repite tu nueva contraseña</string>
    <string name="tu_correo">Correo electronico:</string>
    <string name="muestra_contra">Mostrar la contraseña</string>
    <string name="contrasenya_no_coincide">Las contraseñas no coinciden</string>

    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_citas">Citas</string>
    <string name="menu_slideshow">Historial citas</string>
    <string name="title_activity_inicio_happy_buddy">InicioHappyBuddyActivity</string>
</resources>