<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ara.tfg.happybuddy.ui.homeUsuario.HomeUsuarioFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_usuario" />

    <fragment
        android:id="@+id/nav_cita"
        android:name="ara.tfg.happybuddy.ui.nueva_cita.NuevasCitasFragment"
        android:label="@string/menu_citas"
        tools:layout="@layout/fragment_nueva_cita" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ara.tfg.happybuddy.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>